--- a/app/src/main/res/layout/activity_guide_join_complete.xml
+++ b/app/src/main/res/layout/activity_guide_join_complete.xml
@@ -77,6 +77,7 @@
         android:textSize="18sp"/>
 
     <TextView
+        android:id="@+id/contentTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -84,7 +85,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:text="@string/prompt_join"
-        android:textColor="@color/major_light"
+        android:textColor="@color/hint_white"
         android:textSize="14sp"
         android:lineSpacingMultiplier="1.1"/>
 
