--- a/app/src/main/res/layout/activity_guide_input_contact.xml
+++ b/app/src/main/res/layout/activity_guide_input_contact.xml
@@ -67,7 +67,7 @@
         android:padding="16dp"
         android:background="@color/major_light"
         android:gravity="top"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textEmailAddress"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
