--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -66,7 +66,6 @@
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
 	                android:layout_marginTop="8dp"
-	                android:layout_marginLeft="16dp"
 	                android:text="@string/actual_cost"
 	                android:textColor="@color/major_dark"
 	                android:textSize="14sp"/>
@@ -76,7 +75,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_marginTop="24dp"
 	                android:layout_marginLeft="16dp"
-	                android:layout_marginRight="16dp">
+	                android:layout_marginRight="8dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -96,6 +95,17 @@
 	                    android:textColor="@color/font_reim_number"
 	                    android:textSize="54sp"
                         android:textCursorDrawable="@null"/>
+
+                    <ImageView
+                        android:id="@+id/amountWarningImageView"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="bottom"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:contentDescription="@string/warning"
+                        android:src="@drawable/warning"
+                        android:visibility="gone"/>
 
 	            </LinearLayout>
 
@@ -179,8 +189,7 @@
                     android:id="@+id/categoryLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="80dp"
-                    android:layout_marginRight="16dp">
+                    android:layout_marginLeft="80dp">
 
                     <ImageView
                         android:id="@+id/categoryImageView"
@@ -200,6 +209,18 @@
                         android:text="@string/not_available"
                         android:textColor="@color/font_major_dark"
                         android:textSize="18sp"/>
+
+                    <ImageView
+                        android:id="@+id/categoryWarningImageView"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="8dp"
+                        android:contentDescription="@string/warning"
+                        android:src="@drawable/warning"
+                        android:visibility="gone"/>
+
                 </RelativeLayout>
 
             </RelativeLayout>
@@ -294,7 +315,7 @@
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="80dp"
-                    android:layout_marginRight="16dp"
+                    android:paddingRight="16dp"
                     android:gravity="center_vertical"
                     android:textColor="@color/font_major_dark"
                     android:textSize="18sp"/>
@@ -326,7 +347,7 @@
 	                android:layout_width="match_parent"
 	                android:layout_height="match_parent"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+                    android:paddingRight="10dp"
 	                android:gravity="center_vertical">
 
 		            <TextView
@@ -474,9 +495,9 @@
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
                     android:paddingTop="16dp"
                     android:paddingBottom="16dp"
+                    android:paddingRight="16dp"
 	                android:background="@null"
 	            	android:hint="@string/input_note"
 	                android:textColor="@color/font_major_dark"
