--- a/app/src/main/res/layout/activity_report_edit.xml
+++ b/app/src/main/res/layout/activity_report_edit.xml
@@ -59,7 +59,9 @@
 			    android:layout_height="wrap_content"
 			    android:orientation="vertical"
 			    android:clickable="false"
-			    android:background="@color/major_light">
+			    android:background="@color/major_light"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 			
 			    <LinearLayout
 			        android:layout_width="match_parent"
@@ -67,9 +69,7 @@
                     android:orientation="horizontal"
 			        android:layout_marginTop="20dp"
 			        android:layout_marginLeft="16dp"
-			        android:layout_marginRight="16dp"
-			    	android:focusable="true"
-			   		android:focusableInTouchMode="true">
+			        android:layout_marginRight="16dp">
 			
 			        <EditText
 			            android:id="@+id/titleEditText"
