--- a/app/src/main/res/layout/view_stat_mine.xml
+++ b/app/src/main/res/layout/view_stat_mine.xml
@@ -66,8 +66,10 @@
 	                android:id="@+id/mineUnitTextView"
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="6dp"
 	                android:textColor="@color/major_dark"
-	                android:textSize="38sp"/>
+	                android:textSize="28sp"/>
 	            
             </LinearLayout>
 
