improve ui of choose location

--- a/app/src/main/res/layout/activity_me_change_password.xml
+++ b/app/src/main/res/layout/activity_me_change_password.xml
@@ -40,23 +40,17 @@
         android:layout_marginTop="18dp"
         layout="@layout/view_divider"/>
 
-    <RelativeLayout
+    <classes.widget.ClearEditText
+        android:id="@+id/oldPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/major_light">
-
-        <classes.widget.ClearEditText
-            android:id="@+id/oldPasswordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-	        android:hint="@string/input_password"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp"
-            android:textCursorDrawable="@null"/>
-    </RelativeLayout>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_password"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"
+        android:textCursorDrawable="@null"/>
 
     <include
         android:layout_width="match_parent"
@@ -69,46 +63,34 @@
         android:layout_marginTop="18dp"
         layout="@layout/view_divider"/>
 
-    <RelativeLayout
+    <classes.widget.ClearEditText
+        android:id="@+id/newPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/major_light">
-
-        <classes.widget.ClearEditText
-            android:id="@+id/newPasswordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-	        android:hint="@string/input_new_password"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp"
-            android:textCursorDrawable="@null"/>
-    </RelativeLayout>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_new_password"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"
+        android:textCursorDrawable="@null"/>
 
     <include
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         layout="@layout/view_divider"/>
 
-    <RelativeLayout
+    <classes.widget.ClearEditText
+        android:id="@+id/confirmPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/major_light">
-
-        <classes.widget.ClearEditText
-            android:id="@+id/confirmPasswordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-	        android:hint="@string/input_confirm_password"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp"
-            android:textCursorDrawable="@null"/>
-    </RelativeLayout>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_confirm_password"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"
+        android:textCursorDrawable="@null"/>
 
     <include
         android:layout_width="match_parent"
