--- a/app/src/main/res/layout/activity_reim_location.xml
+++ b/app/src/main/res/layout/activity_reim_location.xml
@@ -30,37 +30,61 @@
             android:textSize="20sp"/>
 
         <TextView
-            android:id="@+id/confirmTextView"
+            android:id="@+id/addTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:gravity="center"
-            android:text="@string/confirm"
+            android:text="@string/add"
             android:textColor="@color/title_text_color"
             android:textSize="16sp"/>
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/searchContainer"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/search"
+            android:src="@drawable/search"/>
 
         <classes.widget.ClearEditText
             android:id="@+id/locationEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
+            android:layout_height="48dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:paddingRight="16dp"
             android:background="@null"
             android:hint="@string/input_location"
             android:textColor="@color/font_major_dark"
             android:textSize="16sp"
             android:textCursorDrawable="@null"/>
 
-    </RelativeLayout>
+    </LinearLayout>
+            
+	<include
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+	  	layout="@layout/view_divider"/>
+
+    <TextView
+        android:layout_width="match_parent"
+	    android:layout_height="24dp"
+        android:paddingLeft="16dp"
+		android:background="@color/list_item_header"
+        android:gravity="center_vertical"
+        android:text="@string/current_location"
+        android:textColor="@color/font_list_item_header"
+        android:textSize="14sp"/>
             
 	<include
 		android:layout_width="match_parent"
@@ -69,18 +93,58 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-	    android:layout_height="24dp"
-		android:background="@color/list_item_header"/>
-            
-	<include
-		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
-	  	layout="@layout/view_divider"/>
+        android:layout_height="match_parent">
 
-	<ListView
-	    android:id="@+id/locationListView"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
-	</ListView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/locationTextView"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:paddingLeft="16dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/major_dark"
+                android:textSize="16sp"/>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider"/>
+
+            <ListView
+                android:id="@+id/locationListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:listSelector="@android:color/transparent"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/centralTextView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/index"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textColor="@color/major_light"
+            android:textSize="30sp"
+            android:visibility="invisible"/>
+
+        <LinearLayout
+            android:id="@+id/indexLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:layout_alignParentRight="true"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:orientation="vertical"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
