--- a/app/src/main/res/layout/activity_reim_member.xml
+++ b/app/src/main/res/layout/activity_reim_member.xml
@@ -90,9 +90,9 @@
             android:id="@+id/memberEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
+            android:gravity="center_vertical"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:paddingRight="16dp"
             android:background="@null"
             android:hint="@string/input_member"
             android:textColor="@color/font_major_dark"
