--- a/app/src/main/res/layout/activity_me_manager.xml
+++ b/app/src/main/res/layout/activity_me_manager.xml
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:paddingRight="16dp"
             android:gravity="center_vertical"
             android:background="@null"
             android:hint="@string/input_default_manager"
