--- a/app/src/main/res/layout/activity_reim_input_location.xml
+++ b/app/src/main/res/layout/activity_reim_input_location.xml
@@ -27,57 +27,46 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/invite_contact"
+            android:text="@string/choose_location"
             android:textColor="@color/major_light"
             android:textSize="20sp"/>
 
         <TextView
-            android:id="@+id/completeTextView"
+            android:id="@+id/confirmTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
 			android:paddingLeft="16dp"
 			android:paddingRight="16dp"
 			android:gravity="center"
-            android:text="@string/complete"
+            android:text="@string/confirm"
             android:textColor="@color/title_text_color"
             android:textSize="16sp"/>
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <include
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0.5dp"
+        android:layout_marginTop="18dp"
+        layout="@layout/view_divider"/>
 
-        <ListView
-            android:id="@+id/contactListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:listSelector="@android:color/transparent"/>
+    <classes.widget.ClearEditText
+        android:id="@+id/locationEditText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_location"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"
+        android:textCursorDrawable="@null"/>
 
-        <TextView
-            android:id="@+id/centralTextView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@drawable/index"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:textColor="@color/major_light"
-            android:textSize="30sp"
-            android:visibility="invisible"/>
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
 
-        <LinearLayout
-            android:id="@+id/indexLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:layout_alignParentRight="true"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:orientation="vertical"/>
-
-    </RelativeLayout>
 
 </LinearLayout>
