--- a/app/src/main/res/layout/activity_report_cc.xml
+++ b/app/src/main/res/layout/activity_report_cc.xml
@@ -120,7 +120,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:paddingRight="16dp"
                 android:background="@null"
                 android:hint="@string/input_cc"
                 android:textColor="@color/font_major_dark"
