--- a/app/src/main/res/layout/activity_report_manager.xml
+++ b/app/src/main/res/layout/activity_report_manager.xml
@@ -117,7 +117,7 @@
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/searchImageView"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:paddingRight="16dp"
             android:background="@null"
             android:hint="@string/input_manager"
             android:textColor="@color/font_major_dark"
