--- a/app/src/main/res/values/city_list.xml
+++ b/app/src/main/res/values/city_list.xml
@@ -3,6 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingTranslation">
 
+    <string-array name="hotCityArray">
+        <item>北京</item>
+        <item>上海</item>
+        <item>广州</item>
+        <item>深圳</item>
+        <item>成都</item>
+        <item>重庆</item>
+        <item>天津</item>
+        <item>杭州</item>
+        <item>南京</item>
+        <item>苏州</item>
+        <item>武汉</item>
+        <item>西安</item>
+    </string-array>
+
     <string-array name="cityArray">
 		<item>北京</item>
 		<item>上海</item>
